--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -10,8 +10,8 @@
       <%- partial('_partial/post/tag') %>
     </div>
   </header>
-// disable gallery, nah i dont want to figure out the conditional based on the page details right now.
-//  <%- partial('_partial/post/gallery') %>
+<!-- disable gallery, nah i dont want to figure out the conditional based on the page details right now. -->
+<!-- <%- partial('_partial/post/gallery') %> --> 
   <div class="content e-content" itemprop="articleBody">
     <%- page.content %>
   </div>
